--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
   <div id="root"></div>
   <script type="module" src="index.jsx"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+  <script src="custom.js" crossorigin></script>
 </body>
 </html>
